cdn path update

--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,13 @@
         ></path>
       </svg>
     </a>
-    <script defer src="http://127.0.0.1:5500/src/random/autoload.js"></script>
-    <link rel="stylesheet" href="http://127.0.0.1:5500/src/css/left.css" />
+    <script
+      defer
+      src="https://npm.elemecdn.com/live2d_api@latest/src/random/autoload.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://npm.elemecdn.com/live2d_api@latest/src/css/left.css"
+    />
   </body>
 </html>
