--- a/demo.html
+++ b/demo.html
@@ -47,11 +47,11 @@
     </a>
     <script
       defer
-      src="https://npm.elemecdn.com/live2d_api@latest/src/random/autoload.js"
+      src="https://npm.elemecdn.com/noa-live2dapi@latest/src/random/autoload.js"
     ></script>
     <link
       rel="stylesheet"
-      href="https://npm.elemecdn.com/live2d_api@latest/src/css/left.css"
+      href="https://npm.elemecdn.com/noa-live2dapi@latest/src/css/left.css"
     />
   </body>
 </html>
