飞机大战Bug修复

--- a/demo.html
+++ b/demo.html
@@ -45,13 +45,15 @@
         ></path>
       </svg>
     </a>
-    <script
+    <!-- <script
       defer
       src="https://npm.elemecdn.com/noa-live2dapi@latest/src/random/autoload.js"
     ></script>
     <link
       rel="stylesheet"
       href="https://npm.elemecdn.com/noa-live2dapi@latest/src/css/left.css"
-    />
+    /> -->
+    <script defer src="http://127.0.0.1:5500/src/random/autoload.js"></script>
+    <link rel="stylesheet" href="http://127.0.0.1:5500/src/css/left.css" />
   </body>
 </html>
