--- a/demo.html
+++ b/demo.html
@@ -45,13 +45,13 @@
         ></path>
       </svg>
     </a>
-    <!-- <script src="https://npm.elemecdn.com/noa-live2dapi@latest/src/sequential/autoload.js"></script>
+    <script src="https://npm.elemecdn.com/noa-live2dapi@1.0.5/src/sequential/autoload.js"></script>
     <link
       rel="stylesheet"
-      href="https://npm.elemecdn.com/noa-live2dapi@latest/src/css/left.css"
-    /> -->
-    <script defer src="http://127.0.0.1:5500/src/sequential/autoload.js"></script>
+      href="https://npm.elemecdn.com/noa-live2dapi@1.0.5/src/css/left.css"
+    />
+    <!-- <script defer src="http://127.0.0.1:5500/src/sequential/autoload.js"></script>
     <link rel="stylesheet" href="http://127.0.0.1:5500/src/css/left.css" />
-    <!-- <script src="https://fastly.jsdelivr.net/gh/nova1751/live2d-widget@latest/autoload.js"></script> -->
+    <script src="https://fastly.jsdelivr.net/gh/nova1751/live2d-widget@latest/autoload.js"></script> -->
   </body>
 </html>
