--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
         ></path>
       </svg>
     </a>
-    <script src="https://npm.elemecdn.com/noa-live2dapi@1.0.5/src/sequential/autoload.js"></script>
+    <!-- 顺序切换模型材质 -->
+    <script src="https://unpkg.com/live2dapi-noa@latest/npm/sequential/autoload.js"></script>
+    <!-- 看板娘位置靠左 -->
     <link
       rel="stylesheet"
-      href="https://npm.elemecdn.com/noa-live2dapi@1.0.5/src/css/left.css"
+      href="https://unpkg.com/live2dapi-noa@latest/css/left.css"
     />
-    <!-- <script defer src="http://127.0.0.1:5500/src/sequential/autoload.js"></script>
-    <link rel="stylesheet" href="http://127.0.0.1:5500/src/css/left.css" />
-    <script src="https://fastly.jsdelivr.net/gh/nova1751/live2d-widget@latest/autoload.js"></script> -->
   </body>
 </html>
