change the demo url

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <a
       id="github"
-      href="https://github.com/stevenjoezhang/live2d-widget"
+      href="https://github.com/nova1751/live2d-api"
       target="_blank"
       title="Visit the open-source code on GitHub!"
     >
