update: change the cdn source

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Live2D 看板娘 / Demo</title>
+    <link
+      rel="stylesheet"
+      href="https://fastly.jsdelivr.net/gh/nova1751/live2d-api@latest/css/left.css"
+    />
     <style>
       #github svg {
         transition: all 1s;
@@ -46,11 +50,6 @@
       </svg>
     </a>
     <!-- 顺序切换模型材质 -->
-    <script src="https://unpkg.com/live2dapi-noa@latest/npm/sequential/autoload.js"></script>
-    <!-- 看板娘位置靠左 -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/live2dapi-noa@latest/css/left.css"
-    />
+    <script src="https://fastly.jsdelivr.net/gh/nova1751/live2d-api@latest/jsdelivr/sequential/autoload.js"></script>
   </body>
 </html>
