fix: update cdn path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Live2D 看板娘 / Demo</title>
     <link
       rel="stylesheet"
-      href="https://fastly.jsdelivr.net/gh/nova1751/live2d-api@latest/css/left.css"
+      href="https://jsd.cdn.zzko.cn/gh/nova1751/live2d-api@latest/css/left.css"
     />
     <style>
       #github svg {
@@ -50,6 +50,6 @@
       </svg>
     </a>
     <!-- 顺序切换模型材质 -->
-    <script src="https://fastly.jsdelivr.net/gh/nova1751/live2d-api@latest/jsdelivr/sequential/autoload.js"></script>
+    <script src="./jsdelivr/random/autoload.js"></script>
   </body>
 </html>
