fix: update cdn path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Live2D 看板娘 / Demo</title>
     <link
       rel="stylesheet"
-      href="https://jsd.cdn.zzko.cn/gh/nova1751/live2d-api@latest/css/left.css"
+      href="https://cdn.jsdmirror.com/gh/nova1751/live2d-api@latest/css/left.css"
     />
     <style>
       #github svg {
