fix: update cdn path

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Live2D 看板娘 / Demo</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdmirror.com/gh/nova1751/live2d-api@latest/css/left.css"
-    />
+    <link rel="stylesheet" href="./css/left.css" />
     <style>
       #github svg {
         transition: all 1s;
